[package]
name = "gen_id_relations"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gen_id = { git = "https://github.com/frsrblch/gen_id" }
iter_context = { git = "https://github.com/frsrblch/iter_context" }
force_derive = { git = "https://github.com/frsrblch/force_derive" }
